--- a/Tugasprak3/css/style.css
+++ b/Tugasprak3/css/style.css
@@ -13,6 +13,7 @@ header{
 	width: 1000px;
 	height: 200px;
 	background: #E9967A;
+	color: white;
 }
 header ul{
 	margin: 0px;
@@ -99,4 +100,35 @@ form {
 	text-align: justify;
 	font-family: imapct;
 	color: #000000;
+}
+.mainmenubtn {
+    background-color: #E9967A;
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding:20px;
+    margin-top:20px;
+}
+ 
+.mainmenubtn:hover {
+    background-color: #E9967A;
+    }
+ 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-child {
+    display: none;
+    background-color: black;
+    min-width: 200px;
+}
+.dropdown-child a {
+    color: white;
+    padding: 20px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown:hover .dropdown-child {
+    display: block;
 }
